@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2013-05-29</date>
- <time>13:58:01</time>
+ <date>2013-05-30</date>
+ <time>18:41:16</time>
  <version>
   <release>3.1.0RC2</release>
   <api>3.0.0</api>
@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mjr] Fix fatal error when updating filters.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1271,10 +1271,10 @@
    <stability>
     <release>beta</release>
     <api>stable</api></stability>
-   <date>2013-05-29</date>
+   <date>2013-05-30</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mjr] Fix fatal error when updating filters.
    </notes>
   </release>
  </changelog>
