@@ -2,6 +2,7 @@
 v3.1.0-git
 ----------
 
+[mjr] Fix fatal error when updating filters.
 
 
 ---------
